atmoshera working again

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <spring.version>3.1.2.RELEASE</spring.version>
         <hibernate.version>4.1.0.Final</hibernate.version>
         <aspectj.version>1.7.0</aspectj.version>
+        <atmosphere.version>1.0.0</atmosphere.version>
     </properties>
 
 
@@ -78,10 +79,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>eu.infomas</groupId>
+            <artifactId>annotation-detector</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
             <!-- Atmosphere's Comet Portable Runtime (CPR) -->
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-runtime</artifactId>
-            <version>0.9.7</version>
+            <version>${atmosphere.version}</version>
         </dependency>
         <dependency>
             <!-- Atmosphere's Jersey module -->
@@ -89,20 +95,20 @@
             <!-- ie. Jersey 1.10 core, server, etc... -->
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jersey</artifactId>
-            <version>0.9.7</version>
+            <version>${atmosphere.version}</version>
         </dependency>
         <dependency>
             <!-- Atmosphere's jQuery plugin -->
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-jquery</artifactId>
-            <version>0.9.7</version>
+            <version>${atmosphere.version}</version>
             <type>war</type>
         </dependency>
         <!-- Jersey's JSON mapper -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
-            <version>1.10</version>
+            <version>1.12</version>
         </dependency>
 
         <dependency>
