--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>catalina</artifactId>
+            <version>6.0.35</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>eu.infomas</groupId>
             <artifactId>annotation-detector</artifactId>
             <version>3.0.1</version>
