--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,18 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>cometEncodingFilter</filter-name>
+        <filter-class>
+            dan.ctl.CometCharacterEncodingFilter
+        </filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>cometEncodingFilter</filter-name>
+        <url-pattern>/api/*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -36,10 +48,7 @@
         <!-- Uncomment if you want to use Servlet 3.0 Async Support
         <async-supported>true</async-supported>
         -->
-        <!--<init-param>-->
-            <!--<param-name>org.atmosphere.cpr.broadcasterClass</param-name>-->
-            <!--<param-value>org.atmosphere.samples.pubsub.PubSubBroadcaster</param-value>-->
-        <!--</init-param>-->
+
         <!-- Uncomment if you want to track broadcasted message using http session.
         <init-param>
             <param-name>org.atmosphere.cpr.sessionSupport</param-name>
@@ -48,11 +57,12 @@
 
         Uncomment one of the above to support persistence and QoS so events are never lost
         when browser is disconnected.
-
-        <init-param>
-            <param-name>org.atmosphere.cpr.broadcasterCacheClass</param-name>
-            <param-value>org.atmosphere.cache.SessionBroadcasterCache</param-value>
-        </init-param>
+         -->
+        <!--<init-param>-->
+            <!--<param-name>org.atmosphere.cpr.broadcasterCacheClass</param-name>-->
+            <!--<param-value>dan.ctl.TopicCache</param-value>-->
+        <!--</init-param>-->
+        <!--
        <init-param>
             <param-name>org.atmosphere.cpr.broadcasterCacheClass</param-name>
             <param-value>org.atmosphere.cache.HeaderBroadcasterCache</param-value>
